tools/fleet/fixtures/packets/invalid/worker-branch-authority.case
source=valid-work.packet
mutation=use Authority-State that permits Worker branch management
expected=invalid
